Tweeks and fixes for dark mode.

--- a/app/assets/src/application/css/_layout.scss
+++ b/app/assets/src/application/css/_layout.scss
@@ -5,6 +5,12 @@ body {
   }
 }
 
+@include color-mode(dark) {
+  body {
+    background-color: var(--bs-secondary-bg);
+  }
+}
+
 #test-server-warning {
   text-align: center;
   padding: 8px;
@@ -62,14 +68,16 @@ body {
 header {
   padding-top: 0;
   padding-bottom: 0;
-  background-color: var(--bs-light-bg-subtle);
+  background-color: var(--bs-white);
 }
 
 @include color-mode(dark) {
   header {
+    background-color: var(--bs-secondary-bg);
+
     .ub-logo, .app-logo {
-      .cls-1 {
-        fill: #f7f7f7;
+      * {
+        fill: $light;
       }
     }
   }
@@ -77,7 +85,7 @@ header {
 
 #page {
   padding: $spacer 0;
-  background-image: radial-gradient(var(--bs-light-bg-subtle) 0.5px, transparent 0.5px), radial-gradient(var(--bs-primary) 0.5px, var(--bs-light-bg-subtle) 0.5px);
+  background-image: radial-gradient(var(--bs-secondary-bg) 0.5px, transparent 0.5px), radial-gradient(var(--bs-primary) 0.5px, var(--bs-secondary-bg) 0.5px);
   background-size: 20px 20px;
   background-position: 0 0,10px 10px;
 
@@ -102,7 +110,7 @@ footer {
 
   .footer-claim {
     font-size: $font-size-sm;
-    background-color: $white;
+    background-color: var(--bs-white);
     font-style: italic;
     color: $upb-blue;
     font-weight: bold;
@@ -116,13 +124,22 @@ footer {
 
   .footer-image {
     text-align: center;
+    background-image:  url("../../../images/footer-bg-lg.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
   }
+}
 
-  @media print {
-    color: $black;
+@include color-mode(dark) {
+  footer {
+    .footer-claim {
+      background-color: var(--bs-gray-700);
+      color: $light;
+    }
 
-    a {
-      color: $black;
+    .footer-image {
+      background-image:  url("../../../images/footer-bg-lg-dark.jpg");
     }
   }
 }
